--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="/home/antonis/workspace/GradeStats/lib/jsoup-1.6.1.jar"/>
+	<classpathentry kind="lib" path="/home/antonis/workspace/GradeStats/lib/jcommon-1.0.16.jar"/>
+	<classpathentry kind="lib" path="/home/antonis/workspace/GradeStats/lib/jfreechart-1.0.13.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
