--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,5 @@
 	<classpathentry kind="lib" path="/home/antonis/workspace/GradeStats/lib/jsoup-1.6.1.jar"/>
 	<classpathentry kind="lib" path="/home/antonis/workspace/GradeStats/lib/jcommon-1.0.16.jar"/>
 	<classpathentry kind="lib" path="/home/antonis/workspace/GradeStats/lib/jfreechart-1.0.13.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="build/classes"/>
 </classpath>
