--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="GradeStats" basedir="." default="main">
+<project name="GradeStats" basedir="." default="jar">
 
     <property name="src.dir"        value="src"/>
     <property name="build.dir"      value="build"/>
